Added Bob Hope info

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -63,7 +63,7 @@
             <a href="{{url_for('medalhonor', hero='yabes')}}" class="hero-link">1SG Maximo Yabes</a> Field Feeding Cook-Off <i>Brigade-Only Event</i><br>
             <a href="{{url_for('medalhonor', hero='warren')}}" class="hero-link">1LT John Warren</a> Drone Competition <i>Brigade-Only Event</i><br>
             <a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> <a href="{{url_for('bracket', event_id='swim')}}">Swimming Relay</a><br>
-            Bob Hope Talent Show<br>
+            <a href="{{url_for('medalhonor', hero='bobhope')}}" class="hero-link">Bob Hope</a> Talent Show<br>
             <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
             <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> Stress Shoot
         </div>
