added scoresHide.html route

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,8 @@
         <a class="navbar-brand text-dark" href="{{url_for('info')}}">
             <button class="btn btn-dark btn-sm"><img src="{{url_for('static', filename='25ID_Logo.png')}}" height="18">Home</button>
         </a>
-        <a class="navbar-brand text-dark" href="{{url_for('scores')}}">
+        <!-- <a class="navbar-brand text-dark" href="{{url_for('scores')}}"> -->
+        <a class="navbar-brand text-dark" href="{{url_for('scoresHide')}}">
             <button class="btn btn-dark btn-sm"><img src="{{url_for('static', filename='Guadalcanal_Cup.png')}}" height="18">Scores</button>
         </a>
         <a class="navbar-brand text-dark" href="{{url_for('labs')}}">
