--- a/templates/info2.html
+++ b/templates/info2.html
@@ -65,7 +65,7 @@
             <a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> <a href="{{url_for('bracket', event_id='swim')}}">Swimming Relay</a><br>
             <a href="{{url_for('medalhonor', hero='bobhope')}}" class="hero-link">Bob Hope</a> <a href="{{url_for('bracket', event_id='talent')}}">Talent Show</a><br>
             <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
-            <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> Stress Shoot
+            <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> <a href="{{url_for('bracket', event_id='shoot')}}">Stress Shoot</a>
         </div>
     </div>
 
@@ -137,8 +137,11 @@
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]<br>
-                        SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Bronco Ready Range')">Bronco Ready Range</a>]
+                        <!-- SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Bronco Ready Range')">Bronco Ready Range</a>] -->
                     </p>
+                    <h4>11:00 AM</h4>
+                    <h5><strong>SP5 Dwight Birdwell Stress Shoot</strong></h5>
+                    <p><a href="javascript:showLocation('Bronco Ready Range')">Bronco Ready Range</a></p>
                 </div>
             </div>
         </div>
