updated FieldFeed time and MOH label

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -136,12 +136,15 @@
                         <!-- PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br> -->
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
-                        Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]<br>
+                        <!-- 1SG Maximo Yabes Field Feeding Cook-Off [<a href="javascript:showLocation('Weyand Field')">Weyand Field</a>]<br> -->
                         <!-- SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Bronco Ready Range')">Bronco Ready Range</a>] -->
                     </p>
                     <h4>11:00 AM</h4>
                     <h5><strong>SP5 Dwight Birdwell Stress Shoot</strong></h5>
                     <p><a href="javascript:showLocation('Bronco Ready Range')">Bronco Ready Range</a></p>
+                    <h4>11:30 AM</h4>
+                    <h5><strong>1SG Maximo Yabes Field Feeding Cook-Off</strong></h5>
+                    <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
                 </div>
             </div>
         </div>
