updated new football bracket

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -45,7 +45,7 @@
     <h2>Events</h2>
     <div class="card">
         <div class="card-header">
-            <strong>Competitive Events</strong>
+            <strong>Competitive Events</strong> <i> &ndash;&ndash;&gt;links to brackets</i>
         </div>
         <div class="card-body">
             <a href="{{url_for('medalhonor', hero='pitts')}}" class="hero-link">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
@@ -56,7 +56,7 @@
             <a href="{{url_for('medalhonor', hero='mcgaha')}}" class="hero-link">MSG Charles McGaha</a> Video Game Tournament<br>
             <a href="{{url_for('medalhonor', hero='copas')}}" class="hero-link">SP4 Ardie Copas</a> Weightlifting Tournament<br>
             <a href="{{url_for('medalhonor', hero='millett')}}" class="hero-link">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='desderio')}}" class="hero-link">CPT Reginald Desiderio</a> Football Tournament<br>
+            <a href="{{url_for('medalhonor', hero='desderio')}}" class="hero-link">CPT Reginald Desiderio</a> <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='fernandez')}}" class="hero-link">SP4 Daniel Fernandez</a> Bowling Competition<br>
             <a href="{{url_for('medalhonor', hero='ray')}}" class="hero-link">CPT Ronald Ray</a> Cook-Off<br>
             <a href="{{url_for('medalhonor', hero='womack')}}" class="hero-link">PFC Bryant Womack</a> <a href="{{url_for('bracket', event_id='surf')}}">Surf Competition</a><br>
