created eSports bracket html

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -53,7 +53,7 @@
             <a href="{{url_for('medalhonor', hero='martinez')}}" class="hero-link">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='foley')}}" class="hero-link">CPT Robert Foley</a> <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='thompson')}}" class="hero-link">PFC William Thompson</a> <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
-            <a href="{{url_for('medalhonor', hero='mcgaha')}}" class="hero-link">MSG Charles McGaha</a> Video Game Tournament<br>
+            <a href="{{url_for('medalhonor', hero='mcgaha')}}" class="hero-link">MSG Charles McGaha</a> <a href="{{url_for('bracket', event_id='eSports')}}">Video Game Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='copas')}}" class="hero-link">SP4 Ardie Copas</a> Weightlifting Tournament<br>
             <a href="{{url_for('medalhonor', hero='millett')}}" class="hero-link">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a><br>
             <a href="{{url_for('medalhonor', hero='desderio')}}" class="hero-link">CPT Reginald Desiderio</a> <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a><br>
