--- a/templates/bracket/softball.html
+++ b/templates/bracket/softball.html
@@ -6,6 +6,6 @@
 {% block content %}
 <h1 class="text-center">CPT Riley Pitts Softball Tournament</h1>
     <div class="container-md"> 
-        <img src="{{ url_for('static', filename='brackets/29NovSoftball.jpg')}}" class="img-fluid" alt="bracket picture">
+        <img src="{{ url_for('static', filename='brackets/new29NovSoftball.jpg')}}" class="img-fluid" alt="bracket picture">
     </div>
 {% endblock %}
