--- a/templates/bracket/swim.html
+++ b/templates/bracket/swim.html
@@ -6,6 +6,6 @@
 {% block content %}
 <h1 class="text-center">SGT William Fournier Swimming Relay</h1>
     <div class="container-md"> 
-        <img src="{{ url_for('static', filename='brackets/Surf.png')}}" class="img-fluid" alt="bracket picture">
+        <img src="{{ url_for('static', filename='brackets/29NovSwim.jpg')}}" class="img-fluid" alt="bracket picture">
     </div>
 {% endblock %}
