updated time and loc of Surf

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -121,9 +121,9 @@
 
             <div id="collapseWednesday" class="collapse" aria-labelledby="headingWednesday" data-parent="#accordion">
                 <div class="card-body text-dark">
-                    <h4>8:30 AM</h4>
+                    <!-- <h4>8:30 AM</h4>
                     <h5><strong>PFC Bryant Womack Surf Competition</strong></h5>
-                    <p><a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a></p>
+                    <p><a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a></p> -->
                     <h4>9:00 AM</h4>
                     <h5><strong>Competitive Events</strong></h5>
                     <p>
@@ -162,6 +162,9 @@
                     <h4>6:30 AM</h4>
                     <h5><strong>SSG Raymond Cooley 10K Race</strong></h5>
                     <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
+                    <h4>8:30 AM</h4>
+                    <h5><strong>PFC Bryant Womack Surf Competition</strong></h5>
+                    <p><a href="javascript:showLocation('Puaena Point')">Pua'ena Point Beach</a></p>
 
                     <h4>9:00 AM</h4>
                     <h5><strong>Competitive Events</strong></h5>
@@ -230,6 +233,7 @@
             "SGT Smith Theater": {lat: 21.49204379463468, lng: -158.05602205881257},
             "Tropic Lightning Memorial": {lat: 21.490134939181367, lng: -158.05888836463802},
             "White Plains Beach": {lat: 21.303668257421904, lng: -158.04521400393108},
+            "Puaena Point": {lat: 21.60272, lng: -158.10515},
             "Schofield Bowling Center": {lat: 21.490304226975162, lng: -158.05621537479138},
             // "Culinary Lab": {lat: 21.492400594061255, lng: -158.0546852751289},
             "Culinary Lab": {lat: 21.493678, lng: -158.056252},
