--- a/templates/bracket/football.html
+++ b/templates/bracket/football.html
@@ -6,6 +6,6 @@
 {% block content %}
 <h1 class="text-center">CPT Reginald Desiderio Football Tournament</h1>
     <div class="container-md"> 
-        <img src="{{ url_for('static', filename='brackets/FlagFootball_Updated.jpg')}}" class="img-fluid" alt="bracket picture">
+        <img src="{{ url_for('static', filename='brackets/new29Football.jpg')}}" class="img-fluid" alt="bracket picture">
     </div>
 {% endblock %}
