removed shoot brack

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -65,7 +65,8 @@
             <a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> <a href="{{url_for('bracket', event_id='swim')}}">Swimming Relay</a><br>
             <a href="{{url_for('medalhonor', hero='bobhope')}}" class="hero-link">Bob Hope</a> <a href="{{url_for('bracket', event_id='talent')}}">Talent Show</a><br>
             <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
-            <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> <a href="{{url_for('bracket', event_id='shoot')}}">Stress Shoot</a>
+            <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> Stress Shoot</a>
+            <!-- <a href="{{url_for('bracket', event_id='shoot')}}"></a> -->
         </div>
     </div>
 
