corrected surf time and loc

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -176,7 +176,7 @@
                         CPT Robert Foley Basketball Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         MSG Charles McGaha Video Game Tournament [<a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a>]<br>
                         CPT Ronald Ray Cook-Off [<a href="javascript:showLocation('Culinary Lab')">Culinary Lab</a>]<br>
-                        PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br>
+                        <!-- PFC Bryant Womack Surf Competition [<a href="javascript:showLocation('White Plains Beach')">White Plains Beach</a>]<br> -->
                         SP4 Ardie Copas Weightlifting Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         CPT Lewis Millett Combatives Tournament [<a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a>]<br>
                         1LT John Warren Drone Competition [<a href="javascript:showLocation('E Quad')">E Quad</a>]<br>
