added fake li to scoresHide

--- a/templates/scoresHide.html
+++ b/templates/scoresHide.html
@@ -9,12 +9,34 @@
     <hr>
     <h2>Leaderboard<br>Total Scores</h2>
     <ul class="container-fluid list-group text-center">
-        {% for team in teams %}
-        <li class="list-group-item bg-secondary text-light">
-            <img src="static/insignia/{{team['name']}}.png" height="50">
-            {{ team["name"] }}  -  {{ team["score"] }} Points
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
         </li>
-        {% endfor %}
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
+        </li>
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
+        </li>
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
+        </li>
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
+        </li>
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
+        </li>
+        <li class="list-group-item bg-secondary text-light blurred-overlay">
+            <img src="static/insignia/HHBN.png" height="50">
+            HHBN  -  1000 Points
+        </li>
     </ul>
 </div>
 <div class="container-flex text-center bg-dark text-light" style="height: 800px;">
