--- a/templates/scoresHide.html
+++ b/templates/scoresHide.html
@@ -2,6 +2,9 @@
 {% block title %}Tropic Lightning Week 2023{% endblock %}
 {% block content %}
 <div class="container-flex">
+            <div class="alert alert-warning">
+                Scoreboard temporarily hidden! Official results will be released at the closing ceremony.
+            </div>
     <img src="{{url_for('static', filename='display/tlw_banner_1.png')}}" width="100%" class="img-responsive">
 </div>
 <hr>
