new new frisbee brack

--- a/templates/bracket/frisbee.html
+++ b/templates/bracket/frisbee.html
@@ -6,6 +6,6 @@
 {% block content %}
 <h1 class="text-center">T4 Laverne Parrish Ultimate Frisbee Tournament</h1>
     <div class="container-md"> 
-        <img src="{{ url_for('static', filename='brackets/new29Frisbee.jpg')}}" class="img-fluid" alt="bracket picture">
+        <img src="{{ url_for('static', filename='brackets/new29Fris.jpg')}}" class="img-fluid" alt="bracket picture">
     </div>
 {% endblock %}
