--- a/templates/bracket/combatives.html
+++ b/templates/bracket/combatives.html
@@ -6,6 +6,6 @@
 {% block content %}
 <h1 class="text-center">CPT Lewis Millett Combatives Tournament</h1>
     <div class="container-md"> 
-        <img src="{{ url_for('static', filename='brackets/Combatives.png')}}" class="img-fluid" alt="bracket picture">
+        <img src="{{ url_for('static', filename='brackets/29NovCombatives.jpg')}}" class="img-fluid" alt="bracket picture">
     </div>
 {% endblock %}
