--- a/templates/info2.html
+++ b/templates/info2.html
@@ -71,6 +71,60 @@
     </div>
 
     <h2>Schedule</h2>
+    <h3>Championships Timeline</h3>
+    <div class="card">
+        <!-- <div class="card-header">
+            <strong>Guadalcanal Cup FINALS!</strong>
+        </div> -->
+        <div class="card-body">
+            <h4>8:00 AM</h4>
+                    <h5><strong><a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> <a href="{{url_for('bracket', event_id='swim')}}">Swimming Relay</a></strong></h5>
+                    <p><a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a></p>
+            <h4>8:30 AM</h4>
+                    <h5><strong><a href="{{url_for('medalhonor', hero='womack')}}" class="hero-link">PFC Bryant Womack</a> <a href="{{url_for('bracket', event_id='surf')}}">Surf Competition</a></strong></h5>
+                    <p><a href="javascript:showLocation('Puaena Point')">Pua'ena Point Beach</a></p>
+            <h4>9:00 AM</h4>
+                    <h5><strong><a href="{{url_for('medalhonor', hero='copas')}}" class="hero-link">SP4 Ardie Copas</a> Weightlifting Tournament</strong></h5>
+                    <p><a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a></p>
+                    <h5><strong><a href="{{url_for('medalhonor', hero='warren')}}" class="hero-link">1LT John Warren</a> Drone Competition</strong></h5>
+                    <p><a href="javascript:showLocation('E Quad')">E Quad</a></p>
+                    <h5><strong><a href="{{url_for('medalhonor', hero='parrish')}}" class="hero-link">T4 Laverne Parrish</a> <a href="{{url_for('bracket', event_id='frisbee')}}">Ultimate Frisbee Tournament</a></strong></h5>
+                    <p><a href="javascript:showLocation('Leaders Field')">Leader's Field</a></p>
+            <h4>9:50 AM</h4>
+                <h5><strong><a href="{{url_for('medalhonor', hero='desderio')}}" class="hero-link">CPT Reginald Desiderio</a> <a href="{{url_for('bracket', event_id='football')}}">Football Tournament</a></strong></h5>
+                <p><a href="javascript:showLocation('Stoneman Sports Complex')">Stoneman Sports Complex</a></p>
+            <h4>11:00 AM</h4>
+                <h5><strong><a href="{{url_for('medalhonor', hero='ray')}}" class="hero-link">CPT Ronald Ray</a> Cook-Off</strong></h5>
+                <p><a href="javascript:showLocation('Culinary Lab')">Culinary Lab</a></p>
+            <h4>3:00 PM</h4>
+                <h5><strong><a href="{{url_for('medalhonor', hero='mcgaha')}}" class="hero-link">MSG Charles McGaha</a> <a href="{{url_for('bracket', event_id='eSports')}}">Video Game Tournament</a></strong></h5>
+                <p><a href="javascript:showLocation('Tropics Recreation Center')">Tropics Recreation Center</a></p>
+            <h4>4:00 PM</h4>
+                <h5><strong><a href="{{url_for('medalhonor', hero='foley')}}" class="hero-link">CPT Robert Foley</a> <a href="{{url_for('bracket', event_id='basketball')}}">Basketball Tournament</a></strong></h5>
+                <p><a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a></p>
+            <h4>5:00 PM</h4>
+                <h5><strong><a href="{{url_for('medalhonor', hero='millett')}}" class="hero-link">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a></strong></h5>
+                <p><a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a></p>
+            <a href="{{url_for('medalhonor', hero='pitts')}}" class="hero-link">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
+            <br>
+            <a href="{{url_for('medalhonor', hero='martinez')}}" class="hero-link">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
+            <br>
+            <a href="{{url_for('medalhonor', hero='thompson')}}" class="hero-link">PFC William Thompson</a> <a href="{{url_for('bracket', event_id='volleyball')}}">Volleyball Tournament</a><br>
+            <br>
+            <br>
+            <br>
+            <br>
+            <a href="{{url_for('medalhonor', hero='fernandez')}}" class="hero-link">SP4 Daniel Fernandez</a> Bowling Competition<br>
+            <br>
+            <br>
+            <a href="{{url_for('medalhonor', hero='yabes')}}" class="hero-link">1SG Maximo Yabes</a> Field Feeding Cook-Off <i>Brigade-Only Event</i><br>
+            <br>
+
+            <a href="{{url_for('medalhonor', hero='bobhope')}}" class="hero-link">Bob Hope</a> <a href="{{url_for('bracket', event_id='talent')}}">Talent Show</a><br>
+            <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
+            <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> Stress Shoot</a>
+            <!-- <a href="{{url_for('bracket', event_id='shoot')}}"></a> -->
+        </div>
     <div id="accordion">
         <div class="card">
             <div class="card-header" id="headingTuesday">
