updated closing day schedule

--- a/templates/info2.html
+++ b/templates/info2.html
@@ -70,13 +70,13 @@
         </div>
     </div>
 
-    <h2>Schedule</h2>
+    <!-- <h2>Schedule</h2>
     <h3>Championships Timeline</h3>
     <div class="card">
-        <!-- <div class="card-header">
+        <div class="card-header">
             <strong>Guadalcanal Cup FINALS!</strong>
         </div> -->
-        <div class="card-body">
+        <!-- <div class="card-body">
             <h4>8:00 AM</h4>
                     <h5><strong><a href="{{url_for('medalhonor', hero='fournier')}}" class="hero-link">SGT William Fournier</a> <a href="{{url_for('bracket', event_id='swim')}}">Swimming Relay</a></strong></h5>
                     <p><a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a></p>
@@ -104,7 +104,7 @@
                 <p><a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a></p>
             <h4>5:00 PM</h4>
                 <h5><strong><a href="{{url_for('medalhonor', hero='millett')}}" class="hero-link">CPT Lewis Millett</a> <a href="{{url_for('bracket', event_id='combatives')}}">Combatives Tournament</a></strong></h5>
-                <p><a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a></p>
+                <p><a href="javascript:showLocation('Martinez Physical Fitness Center')">Martinez Physical Fitness Center</a></p> -->
             <!-- <a href="{{url_for('medalhonor', hero='pitts')}}" class="hero-link">CPT Riley Pitts</a> <a href="{{url_for('bracket', event_id='softball')}}">Softball Tournament</a><br>
             <br>
             <a href="{{url_for('medalhonor', hero='martinez')}}" class="hero-link">CPL Benito Martinez</a> <a href="{{url_for('bracket', event_id='tugOwar')}}">Tug-O-War Tournament</a><br>
@@ -124,7 +124,7 @@
             <a href="{{url_for('medalhonor', hero='cooley')}}" class="hero-link">SSG Raymond Cooley</a> 10K Race<br>
             <a href="{{url_for('medalhonor', hero='birdwell')}}" class="hero-link">SP5 Dwight Birdwell</a> Stress Shoot</a> -->
             <!-- <a href="{{url_for('bracket', event_id='shoot')}}"></a> -->
-        </div>
+        <!-- </div> -->
     <div id="accordion">
         <!-- <div class="card">
             <div class="card-header" id="headingTuesday">
@@ -203,17 +203,17 @@
                 </div>
             </div>
         </div> -->
-        <div class="card">
+        <!-- <div class="card">
             <div class="card-header" id="headingThursday">
               <h5 class="mb-0">
                 <button class="btn btn-link" data-toggle="collapse" data-target="#collapseThursday" aria-expanded="false" aria-controls="collapseThursday">
                   <strong>Thursday, 30 November 2023</strong>
                 </button>
               </h5>
-            </div>
+            </div> -->
 
-            <div id="collapseThursday" class="collapse" aria-labelledby="headingThursday" data-parent="#accordion">
-                <div class="card-body text-dark">
+            <!-- <div id="collapseThursday" class="collapse" aria-labelledby="headingThursday" data-parent="#accordion">
+                <div class="card-body text-dark"> -->
                     <!-- <h4>6:30 AM</h4>
                     <h5><strong>SSG Raymond Cooley 10K Race</strong></h5>
                     <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
@@ -237,12 +237,12 @@
                         SGT William Fournier Swimming Relay [<a href="javascript:showLocation('Richardson Pool')">Richardson Pool</a>]<br> -->
                         <!-- SP5 Dwight Birdwell Stress Shoot [<a href="javascript:showLocation('Range CR2')">Range SB/CR-2</a>]
                     </p> -->
-                    <h4>4:00 PM</h4>
+                    <!-- <h4>4:00 PM</h4>
                     <h5><strong>Tropic Lightning Foundation Induction Ceremony</strong></h5>
                     <p><a href="javascript:showLocation('Tropic Lightning Memorial')">Tropic Lightning Memorial</a></p>
                 </div>
-            </div>
-        </div>
+            </div> -->
+        <!-- </div> -->
         <div class="card">
             <div class="card-header" id="headingFriday">
               <h5 class="mb-0">
@@ -254,7 +254,7 @@
 
             <div id="collapseFriday" class="collapse" aria-labelledby="headingFriday" data-parent="#accordion">
                 <div class="card-body text-dark">
-                    <h4>10:30 AM</h4>
+                    <h4>11:00 AM</h4>
                     <h5><strong>Closing Ceremony</strong></h5>
                     <p><a href="javascript:showLocation('Weyand Field')">Weyand Field</a></p>
                 </div>
