--- a/static/styles.css
+++ b/static/styles.css
@@ -75,3 +75,18 @@
     filter: blur(8px);
     -webkit-filter: blur(8px);
 }
+
+.confetti-piece {
+    position: absolute;
+    width: 10px;
+    height: 15px;
+    opacity: 0.7;
+    animation-name: fall;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes fall {
+    0% { transform: translateY(0) rotate(0deg); }
+    100% { transform:translateY(500px) rotate(360deg); }
+}
