--- a/templates/base.html
+++ b/templates/base.html
@@ -54,5 +54,26 @@
         <a href="mailto:usarmy.schofield.25-id.mbx.lightling-labs-innovations-mailbox@army.mil">Contact us</a>
         <hr>
     </div>
+    <!-- <script>
+        const confettiWrapper = document.getElementById('confetti-wrapper');
+
+        function getRandomColor() {
+            const red = Math.floor(Math.random() * 256);
+            const green = Math.floor(Math.random() * 256);
+            const blue = Math.floor(Math.random() * 256);
+            return `rgb(${red}, ${green}, ${blue})`;
+        }
+
+        for (let i=0; i < 100; i++) {
+            let confettiPiece = document.createElement('div');
+            confettiPiece.className = 'confetti-piece';
+            confettiWrapper.appendChild(confettiPiece);
+
+            confettiPiece.style.left = Math.random() * 100 + '%';
+            confettiPiece.style.animationDuration = Math.random() * 3 + 2 + 's';
+            confettiPiece.style.animationDelay = Math.random() + 's';
+            confettiPiece.syle.backgroundColor = getRandomColor();
+        }
+    </script> -->
 </body>
 </html>
