--- a/templates/base.html
+++ b/templates/base.html
@@ -24,9 +24,9 @@
         <a class="navbar-brand text-dark" href="{{url_for('labs')}}">
             <button class="btn btn-dark btn-sm"><img src="{{url_for('static', filename='LL_Logo.png')}}" height="18">Labs</button>
         </a>
-        <a class="navbar-brand text-dark" href="{{url_for('login')}}">
+        <!-- <a class="navbar-brand text-dark" href="{{url_for('login')}}">
             <button class="btn btn-dark btn-sm">Login</button>
-        </a>
+        </a> -->
     </nav>
     <br>
     <br>
